[tool.poetry]
name = "projeto"
version = "0.1.0"
description = "Implementação da cifra de cesar - by Eduado Mendes 'Live de Python'"
authors = ["Fabricio Araujo <fabricio_2310@hotmail.com>", "dunossauro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10" # ^ Qualquer versão do python que seja maior que 3.10


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
blue = "^0.9.1"
isort = "^5.10.1"
mkdocs = "^1.4.0"
prospector = "^1.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
